<?xml version="1.0"?>
<package format="3">
  <name>deploadblade</name>
  <version>0.0.1</version>
  <description>Depth ROI Publisher using RealSense SDK</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and Build Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <build_depend>librealsense2</build_depend>
  <exec_depend>librealsense2</exec_depend>
  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>

  <!-- For testing (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

